# libiptc-haskell

./: LICENSE  README.md  libiptc.cabal  stack.yaml
src/: IPTC.hs
src/IPTC/: Data.hs  DataSet.hs  Record.hs  Tag.hs
