name:                libiptc
version:             0.1.0.0
synopsis:            libiptc library C bindings
description:         Please see README.md
homepage:            https://github.com/zsedem/iptclib
license:             BSD3
license-file:        LICENSE
author:              Zsigmond Ádám Olivér
maintainer:          zsedem@gmail.com
copyright:           Copyright: (c) 2016 Zsigmond Ádám Olivér
category:            Library
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IPTC
                     , IPTC.Data
                     , IPTC.DataSet
                     , IPTC.Record
                     , IPTC.Tag
  build-depends:       base >= 4.7 && < 5
                     , bytestring
  default-language:    Haskell2010
  extensions:          ForeignFunctionInterface
                     , OverloadedStrings
  pkgconfig-depends:   libiptcdata

source-repository head
  type:     git
  location: https://github.com/zsedem/iptclib
